2024-01-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import autosp-2023-10-07.
	configure.ac: Adapted.

2021-01-08  Akira Kakuto  <kakuto@w32tex.org>

	* Import autosp-2021-01-07.
	configure.ac: Adapted.

2020-06-07  Karl Berry  <karl@freefriends.org>

	* ac/withenable.ac: omit $Id$ from generated output.

2020-02-07  Akira Kakuto  <kakuto@w32tex.org>

	* Import autosp-2020-02-06.
	configure.ac: Adapted.

2020-01-23  Akira Kakuto  <kakuto@w32tex.org>

	* Import autosp-2019-12-22.
	configure.ac: Adapted.

2019-08-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2019-08-26.
	configure.ac: Adapted.

2019-01-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2019-01-08.
	configure.ac, Makefile.am: Adapted.

2018-03-12  Norbert Preining  <norbert@preining.info>

	* autosp.c: Fix a potential bug in the usage of fprintf().
	Avoid a compiler warning.

2018-03-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* autosp-src/tex2aspc.test: Make robust.
	Many thanks Johannes Hielscher.

2018-02-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2018-02-23.
	configure.ac: Adapted.

2018-02-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex2aspc.test: Fix a bug.
	Reported by Johannes Hielscher in tlbuild ML, 2018-02-21.

2018-02-16  Karl Berry  <karl@freefriends.org>

	* Makefile.am (bin_PROGRAMS),
	(tex2aspc_SOURCES),
	(man1_MANS),
	(TESTS),
	(tex2aspc.log): add new program tex2aspc.
	* configure.ac: copyright.

2018-02-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2018-02-14
	configure.ac: Adapted.

2017-12-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-12-26
	configure.ac: Adapted.

2017-07-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-07-14
	configure.ac: Adapted.

2017-07-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Import autosp-2017-06-21
	configure.ac: Adapted.

2017-04-07  Norbert Preining  <norbert@preining.info>

	* Import autosp-2017-04-06
	configure.ac: Adapted.
