@@ -1,4 +1,4 @@
-Changes applied to the autosp 2023-10-07 tree as obtained from:
+Changes applied to the autosp 2025-10-26 tree as obtained from:
 	https://ctan.org/tex-archive/support/autosp
 
 Remove:
