@@ -3,7 +3,7 @@ autosp_SOURCES = utils.h utils.c autosp.h autosp.c process_score.h process_score
   process_command.h process_command.c status.c spacing_note.c xtuplet.c
 rebar_SOURCES = utils.h utils.c rebar.c
 tex2aspc_SOURCES = utils.h utils.c tex2aspc.c
-AM_CFLAGS = -fno-common -O4 -ansi -Wall -Wextra -pedantic-errors -Werror
+AM_CFLAGS = -fno-common -O4 -ansi -Wall -Wextra -pedantic-errors -Werror 
 dist_man_MANS = autosp.1 rebar.1 tex2aspc.1
 ## Tests
 ##
