@@ -1,5 +1,5 @@
 This is the README for the autosp package, 
-version 2021-01-07.
+version 2024-07-01.
 
 autosp is a preprocessor that generates note-spacing
 commands for MusiXTeX scores. It simplifies the creation
@@ -120,19 +120,19 @@ conventional MusiXTeX scores to aspc format suitable for
 autosp pre-processing by merging every conventional notes
 commands in a measure into a single \anotes command.
 
-To install the autosp package, unzip autosp.tds.zip
-at the root of a local or personal texmf tree and
-update the file-name database.  This will install
-documentation and examples.
+To install the autosp package, install documentation and
+examples.
 
-On Windows or MacOSX, install the relevant binaries on
-the PATH of executables. On Unix-like systems, unpack the
-.tar.gz archive, and compile and install using the sequence
+On Windows, install the relevant binaries on the PATH of
+executables.
+
+On Unix-like systems, unpack the .tar.gz archive, and
+compile and install using the sequence
 
 ./configure && make && sudo make install
 
-autosp is licensed under the GPL, version 2 or
-(at your option) any later version.
+autosp is licensed under the GPL, version 2 or (at your
+option) any later version.
 
 Bob T.
-rdt(at)cs(dot)queensu(dot)ca
+rdtennent(at)gmail(dot)com
