@@ -1,3 +1,7 @@
+2025-10-28  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>
+
+	Import autosp-2025-10-26.
+
 2024-01-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	Import autosp-2023-10-07.
